force-app/main/default/objects/Screening_Result__c/Screening_Result__c.object-meta.xml
<CustomObject>
    <label>Screening Result</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>