force-app/main/default/objects/Screening_Result__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Value</label>
    <type>TextArea</type>
</CustomField>