force-app/main/default/objects/Screening_Result__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Screening Results</relationshipLabel>
    <relationshipName>Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>