force-app/main/default/objects/Screening_Result__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Correlation ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>