force-app/main/default/objects/Screening_Result__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>