force-app/main/default/objects/Screening_Result__c/fields/Evaluated_At__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evaluated_At</label>
    <type>DateTime</type>
</CustomField>