force-app/main/default/objects/Screening_Result__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executed_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>