force-app/main/default/objects/Screening_Result__c/fields/Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Execution_Mode__c</fullName>
    <label>Execution_Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>