force-app/main/default/objects/Screening_Result__c/fields/Override_Applied__c.field-meta.xml
<CustomField>
    <fullName>Override_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override_Applied</label>
    <type>Checkbox</type>
</CustomField>