force-app/main/default/objects/Screening_Result__c/fields/Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override_Date</label>
    <type>DateTime</type>
</CustomField>