force-app/main/default/objects/Screening_Result__c/fields/Override_Id__c.field-meta.xml
<CustomField>
    <fullName>Override_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override_Id</label>
    <referenceTo>Screening_Override__c</referenceTo>
    <relationshipLabel>Screening Results</relationshipLabel>
    <relationshipName>Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>