force-app/main/default/objects/Screening_Result__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override_Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>