force-app/main/default/objects/Screening_Result__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed_By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>