force-app/main/default/objects/Screening_Result__c/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <label>Rule_Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>