force-app/main/default/objects/Screening_Result__c/fields/Screening_Rule__c.field-meta.xml
<CustomField>
    <fullName>Screening_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screening Rule</label>
    <referenceTo>Screening_Rule__c</referenceTo>
    <relationshipLabel>Screening Results</relationshipLabel>
    <relationshipName>Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>